<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenERP Mobile</string>
    <string name="menu_settings">Settings</string>
    <string name="loginAct_title">Tu bedzie pewnie obrazek</string>
    <string name="loginAct_server">Server:</string>
    <string name="loginAct_db">Database:</string>

    <string-array name="loginAct_db_arr">
        <item>FirstDB</item>
        <item>SecondDB</item>
        <item>etc</item>
    </string-array>

    <string name="loginAct_db_prompt">Choose a database</string>
    <string name="loginAct_username">Username:</string>
    <string name="loginAct_paswd">Password:</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Main menu</string>
    <string name="title_activity_sales">Sales</string>
    <string name="salesAct_button_customers">Customers</string>
    <string name="salesAct_button_leads">Leads</string>
    <string name="salesAct_button_opp">Opportunities</string>
    <string name="salesAct_button_sorder">Sales order</string>
    <string name="salesAct_button_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_customer_list">Customers</string>
    <string name="title_activity_leads_list">Leads</string>
    <string name="title_activity_accounting">Accounting</string>
    <string name="title_activity_opportunieties">Opportunieties</string>
    <string name="accountingAct_button_text"></string>
    <string name="accountingAct_button_custinv">Customer invoices</string>
    <string name="accountingAct_button_suppinv">Supplier invoices</string>
    <string name="accountingAct_button_journal">Journal</string>
    <string name="accountingAct_button_charts">Charts</string>
    <string name="title_activity_opportunities">OpportunitiesActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="desc_mainAct_button_logout">Logout button</string>
    <string name="desc_mainAct_button_home">Button home</string>
    <string name="desc_mainAct_button_sales">Sales button</string>
    <string name="desc_loginAct_button_login">Login button</string>
    <string name="desc_mainAct_button_project">Project button</string>
    <string name="desc_mainAct_button_accounting">Accounting activity</string>
    <string name="desc_mainAct_button_warehouse">Warehouse button</string>
    <string name="desc_mainAct_button_manufacturing">Manufacturing button</string>
    <string name="desc_mainAct_button_hr">HR button</string>
    <string name="loginAct_text_server_hint">Enter server address</string>
    <string name="loginAct_text_user_hint">Enter login name</string>
    <string name="loginAct_text_pswd_hint">Enter password</string>
    <string name="desc_login_button_login">Login button</string>
    <string name="desc_list_bar">List bar</string>
    <string name="desc_list_person">Person image</string>
    <string name="desc_list_button_add">Add button</string>
    <string name="salesAct_menu_view">menu view</string>
    <string name="salesAct_button_logout">Logout</string>
    <string name="title_activity_customer_details">CustomerDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="desc_custDetAct_photo">Default Photo</string>
    <string name="desc_custDetAct_btn_phonecall">Phone Call button</string>
    <string name="desc_custDetAct_mail">Mailto button</string>
    <string name="desc_custDetAct_btn_web">Web button</string>

</resources>