<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".loginActivity" >

    <ImageView
        android:id="@+id/img_txt_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/loginAct_server"
        android:src="@drawable/text_server" />

    <EditText
        android:id="@+id/loginAct_text_server"
        style="@style/style_text_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/loginAct_text_server"
        android:layout_alignRight="@id/loginAct_text_server"
        android:layout_below="@+id/img_txt_server"
        android:ems="10"
        android:hint="@string/loginAct_text_server_hint" />

    <Spinner
        android:id="@+id/loginAct_dbspinner"
        style="@style/style_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/loginAct_text_server"
        android:layout_alignRight="@id/loginAct_text_server"
        android:layout_below="@+id/img_txt_database"
        android:contentDescription="@string/loginAct_db"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <ImageView
        android:id="@+id/img_txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/img_txt_server"
        android:layout_below="@+id/loginAct_dbspinner"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/loginAct_username"
        android:src="@drawable/text_user" />

    <EditText
        android:id="@+id/loginAct_text_user"
        style="@style/style_text_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/loginAct_text_server"
        android:layout_alignRight="@id/loginAct_text_server"
        android:layout_below="@+id/img_txt_user"
        android:ems="10"
        android:hint="@string/loginAct_text_user_hint" />

    <ImageView
        android:id="@+id/img_txt_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/img_txt_server"
        android:layout_below="@+id/loginAct_text_user"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/loginAct_paswd"
        android:src="@drawable/text_pswd" />

    <EditText
        android:id="@+id/loginAct_text_pswd"
        style="@style/style_text_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/loginAct_text_server"
        android:layout_alignRight="@id/loginAct_text_server"
        android:layout_below="@+id/img_txt_pswd"
        android:ems="10"
        android:hint="@string/loginAct_text_pswd_hint" />

    <ImageView
        android:id="@+id/img_txt_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/img_txt_server"
        android:layout_below="@+id/loginAct_text_server"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/loginAct_db_prompt"
        android:src="@drawable/text_database" />

    <ImageButton
        android:id="@+id/loginAct_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginAct_text_pswd"
        android:layout_below="@+id/loginAct_text_pswd"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:contentDescription="@string/desc_login_button_login"
        android:onClick="onClickButtonLogin"
        android:src="@drawable/button_login" />

</RelativeLayout>