<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity" >

    <Button
        android:id="@+id/accountingAct_button_custinv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountingAct_button_custinv"
        android:onClick="onClickCustInv" />

    <Button
        android:id="@+id/accountingAct_button_suppinv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountingAct_button_suppinv"
        android:onClick="onClickSuppInv" />

    <Button
        android:id="@+id/accountingAct_button_journal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountingAct_button_journal" 
        android:onClick="onClickJournal"/>

    <Button
        android:id="@+id/accountingAct_button_charts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountingAct_button_charts" 
        android:onClick="onClickCharts"/>

</LinearLayout>