<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sales_background"
    tools:context=".SalesActivity" >

    <ImageButton
        android:id="@+id/salesAct_button_customers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="170dp"
        android:background="@null"
        android:contentDescription="@string/salesAct_button_customers"
        android:onClick="onClickCustomers"
        android:scaleType="centerInside"
        android:src="@drawable/sales_customers_bar" />
    
    <ImageButton
        android:id="@+id/salesAct_button_leads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salesAct_button_customers"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:contentDescription="@string/salesAct_button_leads"
        android:onClick="onClickLeads"
        android:scaleType="centerInside"
        android:src="@drawable/sales_leads_bar" />

    <ImageButton
        android:id="@+id/salesAct_button_opp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/salesAct_button_leads"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:contentDescription="@string/salesAct_button_opp"
        android:onClick="onClickOpp"
        android:scaleType="centerInside"
        android:src="@drawable/sales_opp_bar" />

    <ImageButton
        android:id="@+id/salesAct_button_sorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/salesAct_button_opp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:contentDescription="@string/salesAct_button_sorder"
        android:onClick="onClickSOrder"
        android:scaleType="centerInside"
        android:src="@drawable/sales_order_bar" />

    <ImageView
        android:id="@+id/salesAct_menu_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/salesAct_button_customers"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:contentDescription="@string/salesAct_menu_view"
        android:src="@drawable/menu_bar" />

    <ImageButton
        android:id="@+id/salesAct_button_home"
        android:onClick="onClickButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/salesAct_button_logout"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/salesAct_button_logout"
        android:background="@null"
        android:contentDescription="@string/salesAct_button_home"
        android:src="@drawable/button_home" />

    <ImageButton
        android:id="@+id/salesAct_button_logout"
        android:onClick="onClickButtonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:background="@null"
        android:contentDescription="@string/salesAct_button_logout"
        android:src="@drawable/button_logout" />

</RelativeLayout>